--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -5,3 +5,16 @@
 width: 100%;
 height: 100%;
 }
+.parent{
+ display: flex;
+ 
+}
+.child{
+    flex: 50%;
+    padding: 0px;
+    margin: 0px;
+    height: auto;
+}
+h1{
+    padding-left: 50px ;
+}
