--- a/src/Assignment-2/assignment2.css
+++ b/src/Assignment-2/assignment2.css
@@ -5,3 +5,97 @@
 width: 100%;
 height: 100%;
 }
+*{
+
+}
+.row{
+    display: flex;
+}
+.logo{
+    padding: 10px 0px 10px 80px;
+    width: 50%;
+    float: left;
+}
+.search-box{
+    padding: 10px 80px 10px 0px;
+    width: 50%;
+    text-align: right;
+    align-self: center;
+}
+.search-box #search-input{
+    padding: 5px;
+    border-radius: 30px 0px 0px 30px;
+    border: none;
+    height: 30px;
+
+}
+.search-box button{
+    float: right;
+  padding: 6px 10px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  height: 40px;
+
+  border: none;
+  cursor: pointer;
+}
+.menubar{
+    width: 100%;
+    margin: 0px;
+    padding: 20px;
+    background-color: #ddd;
+    color: black;
+    text-align: center;
+}
+.menubar .menu-section{
+    color: rgb(49, 48, 48);
+    margin-right: 50px;
+    font-family: cursive;
+}
+.menubar .menu-section :hover{
+    color: blueviolet;
+}
+
+.content-main{
+    height: auto;
+    display: flex;
+}
+aside {
+    padding: 15px;
+    font-style: italic;
+    background-color: lightgray;
+    border: 1px solid grey;
+    width: 20%;
+  }
+.left-side{
+    float: left;
+  }
+.right-side{
+    float: right;
+    
+}
+  .inner-main{
+    width: 60%;
+    
+}
+.content-col{
+    text-align: center;
+}
+.post-img{
+    width:220px;
+    padding-right:20px ;
+    height: auto;
+}
+.row1 {
+    justify-content: space-around !important;
+    display: flex;
+}
+.row1 img{
+    width:200px;
+}
+.footer{
+    background-color: rgb(58, 58, 58);
+    padding: 50px;
+    margin: 0px;
+}
